--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "reason-tree-sitter",
-  "version": "1.0.1000",
-  "description": "Reason bindings for tree-sitter",
+  "name": "reason-oniguruma",
+  "version": "1.0.0",
+  "description": "Reason bindings for Oniguruma",
   "license": "MIT",
   "scripts": {
     "format": "esy dune build @fmt --auto-promote"
   },
   "esy": {
-    "build": ["refmterr dune build -p onigurama"],
+    "build": ["refmterr dune build -p oniguruma"],
     "buildsInSource": "_build",
     "install": [
-        "esy-installer onigurama.install"
+        "esy-installer oniguruma.install"
     ]
   },
   "resolutions": {
@@ -23,7 +23,7 @@
     "@reason-native/rely": "^1.3.1",
     "refmterr": "*",
     "ocaml": ">=4.6.0",
-    "esy-onigurama": "^5.9.1000",
+    "esy-oniguruma": "^5.9.1000",
     "reperf": "^1.3.0"
   },
   "devDependencies": {
