--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,8 +11,7 @@ jobs:
     vmImage: 'Ubuntu 16.04'
 
   variables:
-    STAGING_DIRECTORY: /home/vsts/STAGING
-    STAGING_DIRECTORY_UNIX: /home/vsts/STAGING
+    STAGING_DIRECTORY: $(Build.StagingDirectory)
     ESY__CACHE_INSTALL_PATH: /home/vsts/.esy/3_____________________________________________________________________/i
     ESY__CACHE_SOURCE_TARBALL_PATH: /home/vsts/.esy/source/i
     # ESY__NPM_ROOT: /opt/hostedtoolcache/node/8.14.0/x64/lib/node_modules/esy
@@ -23,7 +22,6 @@ jobs:
   - template: .ci/restore-build-cache.yml
   - template: .ci/esy-build-steps.yml
   # - template: .ci/esy-bench.yml
-  # - template: .ci/publish-release.yml
   # - template: .ci/create-docs.yml
   - template: .ci/publish-build-cache.yml
 
@@ -34,10 +32,9 @@ jobs:
     vmImage: 'macOS 10.13'
 
   variables:
-    STAGING_DIRECTORY: /Users/vsts/STAGING
-    STAGING_DIRECTORY_UNIX: /Users/vsts/STAGING
-    ESY__CACHE_INSTALL_PATH: /Users/vsts/.esy/3____________________________________________________________________/i
-    ESY__CACHE_SOURCE_TARBALL_PATH: /Users/vsts/.esy/source/i
+    STAGING_DIRECTORY: $(Build.StagingDirectory)
+    ESY__CACHE_INSTALL_PATH: /Users/runner/.esy/3__________________________________________________________________/i
+    ESY__CACHE_SOURCE_TARBALL_PATH: /Users/runner/.esy/source/i
     # ESY__NPM_ROOT: /usr/local/lib/node_modules/esy
 
   steps:
@@ -54,10 +51,9 @@ jobs:
     vmImage: 'macOS 10.13'
 
   variables:
-    STAGING_DIRECTORY: /Users/vsts/STAGING
-    STAGING_DIRECTORY_UNIX: /Users/vsts/STAGING
-    ESY__CACHE_INSTALL_PATH: /Users/vsts/.esy/3____________________________________________________________________/i
-    ESY__CACHE_SOURCE_TARBALL_PATH: /Users/vsts/.esy/source/i
+    STAGING_DIRECTORY: $(Build.StagingDirectory)
+    ESY__CACHE_INSTALL_PATH: /Users/runner/.esy/3__________________________________________________________________/i
+    ESY__CACHE_SOURCE_TARBALL_PATH: /Users/runner/.esy/source/i
     # ESY__NPM_ROOT: /usr/local/lib/node_modules/esy
 
   steps:
@@ -67,7 +63,6 @@ jobs:
   - template: .ci/restore-build-cache.yml
   - template: .ci/esy-build-steps.yml
   # - template: .ci/esy-bench.yml
-  # - template: .ci/publish-release.yml
   - template: .ci/publish-build-cache.yml
 
 - job: Windows
@@ -76,8 +71,7 @@ jobs:
     vmImage: 'vs2017-win2016'
 
   variables:
-    STAGING_DIRECTORY: C:\Users\VssAdministrator\STAGING
-    STAGING_DIRECTORY_UNIX: /C/Users/VssAdministrator/STAGING
+    STAGING_DIRECTORY: $(Build.StagingDirectory)
     ESY__CACHE_INSTALL_PATH: /C/Users/VssAdministrator/.esy/3_/i
     ESY__CACHE_SOURCE_TARBALL_PATH: /C/Users/VssAdministrator/.esy/source/i
     # ESY__NPM_ROOT: /C/npm/prefix/node_modules/esy
@@ -87,5 +81,4 @@ jobs:
   - template: .ci/restore-build-cache.yml
   - template: .ci/esy-build-steps.yml
   # - template: .ci/esy-bench.yml
-  # - template: .ci/publish-release.yml
   - template: .ci/publish-build-cache.yml
