--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@opam/dune": "^1.6.0",
+    "@opam/dune-configurator": "*",
     "@esy-ocaml/reason": "^3.4.0",
     "@reason-native/rely": "^1.3.1",
     "refmterr": "*",
