Move rely from default to @test sandbox (#10)
* pin ocaml devDependency to 4.8

* depdency: add dune-configurator

* dependency: remove rely from default sandbox

* update lockfiles

* Fix install file promotion for test.json

Co-authored-by: Bryan Phelps <bryphe@outlook.com>

--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
   },
   "dependencies": {
     "@opam/dune": "^1.6.0",
+    "@opam/dune-configurator": "*",
     "@esy-ocaml/reason": "^3.4.0",
-    "@reason-native/rely": "^1.3.1",
     "refmterr": "*",
     "ocaml": ">=4.6.0",
     "esy-oniguruma": "^6.9.4000",
     "reperf": "^1.3.0"
   },
   "devDependencies": {
-    "ocaml": ">=4.6.0"
+    "ocaml": "~4.8.0"
   }
 }
